ingress-prod-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: prod
  annotations:
    ingress.bluemix.net/redirect-to-https: "true"
    ingress.bluemix.net/rewrite-path: |
      serviceName=marmotta rewrite=/;
      serviceName=identity-service rewrite=/;
      serviceName=frontend-service rewrite=/;
      serviceName=catalog-service rewrite=/;
      serviceName=business-process-service rewrite=/;
      serviceName=keycloak rewrite=/;
      serviceName=registration-service rewrite=/;
      serviceName=csb-kafka rewrite=/;
      serviceName=messaging-service rewrite=/;
      serviceName=hwm rewrite=/;
      serviceName=dashboards-service rewrite=/;
  name: rules-prod
spec:
  tls:
  - hosts:
    - nimble-platform.uk-south.containers.mybluemix.net
    secretName: nimble-platform
  rules:
  - host: nimble-platform.uk-south.containers.mybluemix.net
    http:
      paths:
        - path: /identity/
          backend:
            serviceName: identity-service
            servicePort: 9096
        - path: /frontend/
          backend:
            serviceName: frontend-service
            servicePort: 8080
        - path: /catalog/
          backend:
            serviceName: catalog-service
            servicePort: 8095
        - path: /business-process/
          backend:
            serviceName: business-process-service
            servicePort: 8085
        - path: /marmotta/
          backend:
            serviceName: marmotta
            servicePort: 8080
        - path: /keycloak/
          backend:
            serviceName: keycloak
            servicePort: 8080
        - path: /register/
          backend:
            serviceName: registration-service
            servicePort: 8080     
        - path: /csb/
          backend:
            serviceName: csb-kafka
            servicePort: 8080
        - path: /messaging/
          backend:
            serviceName: messaging-service
            servicePort: 8080
        - path: /HWServlet
          backend:
            serviceName: hwm
            servicePort: 8080
        - path: /dashboards/
          backend:
            serviceName: dashboards-service
            servicePort: 8080
